lab3/parser.output
Terminals unused in grammar

   TOKEN_COMMENT
   TOKEN_DIVIDE
   TOKEN_DECIMAL
   TOKEN_EXPNUM


State 145 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON groupTypeDefinitions groupVariableDeclarations groupSubprogramDeclarations compoundStatement TOKEN_DOT

    2 groupTypeDefinitions: typeDefinitions
    3                     | /* empty */

    4 groupVariableDeclarations: variableDeclarations
    5                          | /* empty */

    6 groupSubprogramDeclarations: subprogramDeclarations
    7                            | /* empty */

    8 typeDefinitions: TOKEN_TYPE typeDefinitionList

    9 typeDefinitionList: typeDefinitionList typeDefinition
   10                   | typeDefinition

   11 variableDeclarations: TOKEN_VAR variableDeclarationList

   12 variableDeclarationList: variableDeclarationList variableDeclaration
   13                        | variableDeclaration

   14 subprogramDeclarations: subprogramDeclarationList

   15 subprogramDeclarationList: subprogramDeclarationList procedureDeclaration
   16                          | subprogramDeclarationList functionDeclaration
   17                          | procedureDeclaration
   18                          | functionDeclaration

   19 typeDefinition: TOKEN_ID TOKEN_EQ type TOKEN_SEMICOLON

   20 variableDeclaration: identifierList TOKEN_COLON type TOKEN_SEMICOLON

   21 $@1: /* empty */

   22 procedureDeclaration: TOKEN_PROCEDURE TOKEN_ID TOKEN_LPAR formalParameterList $@1 TOKEN_RPAR TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

   23 $@2: /* empty */

   24 functionDeclaration: TOKEN_FUNCTION TOKEN_ID TOKEN_LPAR formalParameterList TOKEN_RPAR TOKEN_COLON resultType $@2 TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

   25 groupBlockForward: block
   26                  | TOKEN_FORWARD

   27 formalParameterList: formalParamSeq
   28                    | /* empty */

   29 formalParamSeq: formalParamSeq TOKEN_SEMICOLON identifierList TOKEN_COLON type
   30               | identifierList TOKEN_COLON type

   31 block: groupVariableDeclarations compoundStatement

   32 compoundStatement: TOKEN_BEGIN statementSequence TOKEN_END

   33 statementSequence: statementSequence TOKEN_SEMICOLON statement
   34                  | statement

   35 statement: groupSimStruStatement

   36 groupSimStruStatement: simpleStatement
   37                      | structuredStatement

   38 simpleStatement: assignmentStatement
   39                | procedureStatement
   40                | /* empty */

   41 assignmentStatement: variable TOKEN_ASSIGN expression

   42 procedureStatement: TOKEN_ID TOKEN_LPAR actualParameterList TOKEN_RPAR

   43 structuredStatement: compoundStatement
   44                    | TOKEN_IF expression TOKEN_THEN statement
   45                    | TOKEN_IF expression TOKEN_THEN statement TOKEN_ELSE statement
   46                    | TOKEN_WHILE expression TOKEN_DO statement
   47                    | TOKEN_FOR TOKEN_ID TOKEN_ASSIGN expression TOKEN_TO expression TOKEN_DO statement

   48 type: TOKEN_ID
   49     | TOKEN_ARRAY TOKEN_LBRACKET constant TOKEN_RANGE constant TOKEN_RBRACKET TOKEN_OF type

   50 $@3: /* empty */

   51 type: TOKEN_RECORD $@3 fieldList TOKEN_END

   52 resultType: TOKEN_ID

   53 fieldList: fieldListSeq
   54          | /* empty */

   55 fieldListSeq: fieldListSeq TOKEN_SEMICOLON identifierList TOKEN_COLON type
   56             | identifierList TOKEN_COLON type

   57 constant: TOKEN_INT
   58         | sign TOKEN_INT

   59 expression: simpleExpression groupRelOpSimExpr

   60 groupRelOpSimExpr: relationalOp simpleExpression
   61                  | /* empty */

   62 relationalOp: TOKEN_LT
   63             | TOKEN_LE
   64             | TOKEN_GT
   65             | TOKEN_GE
   66             | TOKEN_NOTEQ
   67             | TOKEN_EQ

   68 simpleExpression: sign term
   69                 | term
   70                 | simpleExpression addOp term

   71 addOp: TOKEN_PLUS
   72      | TOKEN_MINUS
   73      | TOKEN_OR

   74 term: term mulOp factor
   75     | factor

   76 mulOp: TOKEN_MULTIPLY
   77      | TOKEN_DIV
   78      | TOKEN_MOD
   79      | TOKEN_AND

   80 factor: TOKEN_INT
   81       | TOKEN_STR
   82       | variable
   83       | functionReference
   84       | TOKEN_NOT factor
   85       | TOKEN_LPAR expression TOKEN_RPAR

   86 functionReference: TOKEN_ID TOKEN_LPAR actualParameterList TOKEN_RPAR

   87 $@4: /* empty */

   88 variable: TOKEN_ID $@4 componentSelection

   89 componentSelection: TOKEN_DOT TOKEN_ID componentSelection
   90                   | TOKEN_LBRACKET expression TOKEN_RBRACKET componentSelection
   91                   | /* empty */

   92 actualParameterList: expressionList
   93                    | /* empty */

   94 expressionList: expressionList TOKEN_COMMAS expression
   95               | expression

   96 identifierList: identifierList TOKEN_COMMAS TOKEN_ID
   97               | TOKEN_ID

   98 sign: TOKEN_PLUS
   99     | TOKEN_MINUS


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_COMMENT (258)
TOKEN_STR (259) 81
TOKEN_AND (260) 79
TOKEN_BEGIN (261) 32
TOKEN_FORWARD (262) 26
TOKEN_DIV (263) 77
TOKEN_DO (264) 46 47
TOKEN_ELSE (265) 45
TOKEN_END (266) 32 51
TOKEN_FOR (267) 47
TOKEN_FUNCTION (268) 24
TOKEN_IF (269) 44 45
TOKEN_ARRAY (270) 49
TOKEN_MOD (271) 78
TOKEN_NOT (272) 84
TOKEN_OF (273) 49
TOKEN_OR (274) 73
TOKEN_PROCEDURE (275) 22
TOKEN_PROGRAM (276) 1
TOKEN_RECORD (277) 51
TOKEN_THEN (278) 44 45
TOKEN_TO (279) 47
TOKEN_TYPE (280) 8
TOKEN_VAR (281) 11
TOKEN_WHILE (282) 46
TOKEN_PLUS (283) 71 98
TOKEN_MINUS (284) 72 99
TOKEN_MULTIPLY (285) 76
TOKEN_DIVIDE (286)
TOKEN_EQ (287) 19 67
TOKEN_LT (288) 62
TOKEN_LE (289) 63
TOKEN_GT (290) 64
TOKEN_GE (291) 65
TOKEN_NOTEQ (292) 66
TOKEN_ID (293) 1 19 22 24 42 47 48 52 86 88 89 96 97
TOKEN_INT (294) 57 58 80
TOKEN_DECIMAL (295)
TOKEN_EXPNUM (296)
TOKEN_DOT (297) 1 89
TOKEN_COMMAS (298) 94 96
TOKEN_COLON (299) 20 24 29 30 55 56
TOKEN_SEMICOLON (300) 1 19 20 22 24 29 33 55
TOKEN_ASSIGN (301) 41 47
TOKEN_RANGE (302) 49
TOKEN_LPAR (303) 22 24 42 85 86
TOKEN_RPAR (304) 22 24 42 85 86
TOKEN_LBRACKET (305) 49 90
TOKEN_RBRACKET (306) 49 90
UMINUS (307)
UPLUS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0
groupTypeDefinitions (56)
    on left: 2 3, on right: 1
groupVariableDeclarations (57)
    on left: 4 5, on right: 1 31
groupSubprogramDeclarations (58)
    on left: 6 7, on right: 1
typeDefinitions (59)
    on left: 8, on right: 2
typeDefinitionList (60)
    on left: 9 10, on right: 8 9
variableDeclarations (61)
    on left: 11, on right: 4
variableDeclarationList (62)
    on left: 12 13, on right: 11 12
subprogramDeclarations (63)
    on left: 14, on right: 6
subprogramDeclarationList (64)
    on left: 15 16 17 18, on right: 14 15 16
typeDefinition (65)
    on left: 19, on right: 9 10
variableDeclaration (66)
    on left: 20, on right: 12 13
procedureDeclaration (67)
    on left: 22, on right: 15 17
$@1 (68)
    on left: 21, on right: 22
functionDeclaration (69)
    on left: 24, on right: 16 18
$@2 (70)
    on left: 23, on right: 24
groupBlockForward (71)
    on left: 25 26, on right: 22 24
formalParameterList (72)
    on left: 27 28, on right: 22 24
formalParamSeq (73)
    on left: 29 30, on right: 27 29
block (74)
    on left: 31, on right: 25
compoundStatement (75)
    on left: 32, on right: 1 31 43
statementSequence (76)
    on left: 33 34, on right: 32 33
statement (77)
    on left: 35, on right: 33 34 44 45 46 47
groupSimStruStatement (78)
    on left: 36 37, on right: 35
simpleStatement (79)
    on left: 38 39 40, on right: 36
assignmentStatement (80)
    on left: 41, on right: 38
procedureStatement (81)
    on left: 42, on right: 39
structuredStatement (82)
    on left: 43 44 45 46 47, on right: 37
type (83)
    on left: 48 49 51, on right: 19 20 29 30 49 55 56
$@3 (84)
    on left: 50, on right: 51
resultType (85)
    on left: 52, on right: 24
fieldList (86)
    on left: 53 54, on right: 51
fieldListSeq (87)
    on left: 55 56, on right: 53 55
constant (88)
    on left: 57 58, on right: 49
expression (89)
    on left: 59, on right: 41 44 45 46 47 85 90 94 95
groupRelOpSimExpr (90)
    on left: 60 61, on right: 59
relationalOp (91)
    on left: 62 63 64 65 66 67, on right: 60
simpleExpression (92)
    on left: 68 69 70, on right: 59 60 70
addOp (93)
    on left: 71 72 73, on right: 70
term (94)
    on left: 74 75, on right: 68 69 70 74
mulOp (95)
    on left: 76 77 78 79, on right: 74
factor (96)
    on left: 80 81 82 83 84 85, on right: 74 75 84
functionReference (97)
    on left: 86, on right: 83
variable (98)
    on left: 88, on right: 41 82
$@4 (99)
    on left: 87, on right: 88
componentSelection (100)
    on left: 89 90 91, on right: 88 89 90
actualParameterList (101)
    on left: 92 93, on right: 42 86
expressionList (102)
    on left: 94 95, on right: 92 94
identifierList (103)
    on left: 96 97, on right: 20 29 30 55 56 96
sign (104)
    on left: 98 99, on right: 58 68


state 0

    0 $accept: . program $end

    TOKEN_PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: TOKEN_PROGRAM . TOKEN_ID TOKEN_SEMICOLON groupTypeDefinitions groupVariableDeclarations groupSubprogramDeclarations compoundStatement TOKEN_DOT

    TOKEN_ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: TOKEN_PROGRAM TOKEN_ID . TOKEN_SEMICOLON groupTypeDefinitions groupVariableDeclarations groupSubprogramDeclarations compoundStatement TOKEN_DOT

    TOKEN_SEMICOLON  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON . groupTypeDefinitions groupVariableDeclarations groupSubprogramDeclarations compoundStatement TOKEN_DOT

    TOKEN_TYPE  shift, and go to state 6

    $default  reduce using rule 3 (groupTypeDefinitions)

    groupTypeDefinitions  go to state 7
    typeDefinitions       go to state 8


state 6

    8 typeDefinitions: TOKEN_TYPE . typeDefinitionList

    TOKEN_ID  shift, and go to state 9

    typeDefinitionList  go to state 10
    typeDefinition      go to state 11


state 7

    1 program: TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON groupTypeDefinitions . groupVariableDeclarations groupSubprogramDeclarations compoundStatement TOKEN_DOT

    TOKEN_VAR  shift, and go to state 12

    $default  reduce using rule 5 (groupVariableDeclarations)

    groupVariableDeclarations  go to state 13
    variableDeclarations       go to state 14


state 8

    2 groupTypeDefinitions: typeDefinitions .

    $default  reduce using rule 2 (groupTypeDefinitions)


state 9

   19 typeDefinition: TOKEN_ID . TOKEN_EQ type TOKEN_SEMICOLON

    TOKEN_EQ  shift, and go to state 15


state 10

    8 typeDefinitions: TOKEN_TYPE typeDefinitionList .
    9 typeDefinitionList: typeDefinitionList . typeDefinition

    TOKEN_ID  shift, and go to state 9

    $default  reduce using rule 8 (typeDefinitions)

    typeDefinition  go to state 16


state 11

   10 typeDefinitionList: typeDefinition .

    $default  reduce using rule 10 (typeDefinitionList)


state 12

   11 variableDeclarations: TOKEN_VAR . variableDeclarationList

    TOKEN_ID  shift, and go to state 17

    variableDeclarationList  go to state 18
    variableDeclaration      go to state 19
    identifierList           go to state 20


state 13

    1 program: TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON groupTypeDefinitions groupVariableDeclarations . groupSubprogramDeclarations compoundStatement TOKEN_DOT

    TOKEN_FUNCTION   shift, and go to state 21
    TOKEN_PROCEDURE  shift, and go to state 22

    $default  reduce using rule 7 (groupSubprogramDeclarations)

    groupSubprogramDeclarations  go to state 23
    subprogramDeclarations       go to state 24
    subprogramDeclarationList    go to state 25
    procedureDeclaration         go to state 26
    functionDeclaration          go to state 27


state 14

    4 groupVariableDeclarations: variableDeclarations .

    $default  reduce using rule 4 (groupVariableDeclarations)


state 15

   19 typeDefinition: TOKEN_ID TOKEN_EQ . type TOKEN_SEMICOLON

    TOKEN_ARRAY   shift, and go to state 28
    TOKEN_RECORD  shift, and go to state 29
    TOKEN_ID      shift, and go to state 30

    type  go to state 31


state 16

    9 typeDefinitionList: typeDefinitionList typeDefinition .

    $default  reduce using rule 9 (typeDefinitionList)


state 17

   97 identifierList: TOKEN_ID .

    $default  reduce using rule 97 (identifierList)


state 18

   11 variableDeclarations: TOKEN_VAR variableDeclarationList .
   12 variableDeclarationList: variableDeclarationList . variableDeclaration

    TOKEN_ID  shift, and go to state 17

    $default  reduce using rule 11 (variableDeclarations)

    variableDeclaration  go to state 32
    identifierList       go to state 20


state 19

   13 variableDeclarationList: variableDeclaration .

    $default  reduce using rule 13 (variableDeclarationList)


state 20

   20 variableDeclaration: identifierList . TOKEN_COLON type TOKEN_SEMICOLON
   96 identifierList: identifierList . TOKEN_COMMAS TOKEN_ID

    TOKEN_COMMAS  shift, and go to state 33
    TOKEN_COLON   shift, and go to state 34


state 21

   24 functionDeclaration: TOKEN_FUNCTION . TOKEN_ID TOKEN_LPAR formalParameterList TOKEN_RPAR TOKEN_COLON resultType $@2 TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

    TOKEN_ID  shift, and go to state 35


state 22

   22 procedureDeclaration: TOKEN_PROCEDURE . TOKEN_ID TOKEN_LPAR formalParameterList $@1 TOKEN_RPAR TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

    TOKEN_ID  shift, and go to state 36


state 23

    1 program: TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON groupTypeDefinitions groupVariableDeclarations groupSubprogramDeclarations . compoundStatement TOKEN_DOT

    TOKEN_BEGIN  shift, and go to state 37

    compoundStatement  go to state 38


state 24

    6 groupSubprogramDeclarations: subprogramDeclarations .

    $default  reduce using rule 6 (groupSubprogramDeclarations)


state 25

   14 subprogramDeclarations: subprogramDeclarationList .
   15 subprogramDeclarationList: subprogramDeclarationList . procedureDeclaration
   16                          | subprogramDeclarationList . functionDeclaration

    TOKEN_FUNCTION   shift, and go to state 21
    TOKEN_PROCEDURE  shift, and go to state 22

    $default  reduce using rule 14 (subprogramDeclarations)

    procedureDeclaration  go to state 39
    functionDeclaration   go to state 40


state 26

   17 subprogramDeclarationList: procedureDeclaration .

    $default  reduce using rule 17 (subprogramDeclarationList)


state 27

   18 subprogramDeclarationList: functionDeclaration .

    $default  reduce using rule 18 (subprogramDeclarationList)


state 28

   49 type: TOKEN_ARRAY . TOKEN_LBRACKET constant TOKEN_RANGE constant TOKEN_RBRACKET TOKEN_OF type

    TOKEN_LBRACKET  shift, and go to state 41


state 29

   51 type: TOKEN_RECORD . $@3 fieldList TOKEN_END

    $default  reduce using rule 50 ($@3)

    $@3  go to state 42


state 30

   48 type: TOKEN_ID .

    $default  reduce using rule 48 (type)


state 31

   19 typeDefinition: TOKEN_ID TOKEN_EQ type . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 43


state 32

   12 variableDeclarationList: variableDeclarationList variableDeclaration .

    $default  reduce using rule 12 (variableDeclarationList)


state 33

   96 identifierList: identifierList TOKEN_COMMAS . TOKEN_ID

    TOKEN_ID  shift, and go to state 44


state 34

   20 variableDeclaration: identifierList TOKEN_COLON . type TOKEN_SEMICOLON

    TOKEN_ARRAY   shift, and go to state 28
    TOKEN_RECORD  shift, and go to state 29
    TOKEN_ID      shift, and go to state 30

    type  go to state 45


state 35

   24 functionDeclaration: TOKEN_FUNCTION TOKEN_ID . TOKEN_LPAR formalParameterList TOKEN_RPAR TOKEN_COLON resultType $@2 TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

    TOKEN_LPAR  shift, and go to state 46


state 36

   22 procedureDeclaration: TOKEN_PROCEDURE TOKEN_ID . TOKEN_LPAR formalParameterList $@1 TOKEN_RPAR TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

    TOKEN_LPAR  shift, and go to state 47


state 37

   32 compoundStatement: TOKEN_BEGIN . statementSequence TOKEN_END

    TOKEN_BEGIN  shift, and go to state 37
    TOKEN_FOR    shift, and go to state 48
    TOKEN_IF     shift, and go to state 49
    TOKEN_WHILE  shift, and go to state 50
    TOKEN_ID     shift, and go to state 51

    $default  reduce using rule 40 (simpleStatement)

    compoundStatement      go to state 52
    statementSequence      go to state 53
    statement              go to state 54
    groupSimStruStatement  go to state 55
    simpleStatement        go to state 56
    assignmentStatement    go to state 57
    procedureStatement     go to state 58
    structuredStatement    go to state 59
    variable               go to state 60


state 38

    1 program: TOKEN_PROGRAM TOKEN_ID TOKEN_SEMICOLON groupTypeDefinitions groupVariableDeclarations groupSubprogramDeclarations compoundStatement . TOKEN_DOT

    TOKEN_DOT  shift, and go to state 61


state 39

   15 subprogramDeclarationList: subprogramDeclarationList procedureDeclaration .

    $default  reduce using rule 15 (subprogramDeclarationList)


state 40

   16 subprogramDeclarationList: subprogramDeclarationList functionDeclaration .

    $default  reduce using rule 16 (subprogramDeclarationList)


state 41

   49 type: TOKEN_ARRAY TOKEN_LBRACKET . constant TOKEN_RANGE constant TOKEN_RBRACKET TOKEN_OF type

    TOKEN_PLUS   shift, and go to state 62
    TOKEN_MINUS  shift, and go to state 63
    TOKEN_INT    shift, and go to state 64

    constant  go to state 65
    sign      go to state 66


state 42

   51 type: TOKEN_RECORD $@3 . fieldList TOKEN_END

    TOKEN_ID  shift, and go to state 17

    $default  reduce using rule 54 (fieldList)

    fieldList       go to state 67
    fieldListSeq    go to state 68
    identifierList  go to state 69


state 43

   19 typeDefinition: TOKEN_ID TOKEN_EQ type TOKEN_SEMICOLON .

    $default  reduce using rule 19 (typeDefinition)


state 44

   96 identifierList: identifierList TOKEN_COMMAS TOKEN_ID .

    $default  reduce using rule 96 (identifierList)


state 45

   20 variableDeclaration: identifierList TOKEN_COLON type . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 70


state 46

   24 functionDeclaration: TOKEN_FUNCTION TOKEN_ID TOKEN_LPAR . formalParameterList TOKEN_RPAR TOKEN_COLON resultType $@2 TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

    TOKEN_ID  shift, and go to state 17

    $default  reduce using rule 28 (formalParameterList)

    formalParameterList  go to state 71
    formalParamSeq       go to state 72
    identifierList       go to state 73


state 47

   22 procedureDeclaration: TOKEN_PROCEDURE TOKEN_ID TOKEN_LPAR . formalParameterList $@1 TOKEN_RPAR TOKEN_SEMICOLON groupBlockForward TOKEN_SEMICOLON

    TOKEN_ID  shift, and go to state 17

    $default  reduce using rule 28 (formalParameterList)

    formalParameterList  go to state 74
    formalParamSeq       go to state 72
    identifierList       go to state 73


state 48

   47 structuredStatement: TOKEN_FOR . TOKEN_ID TOKEN_ASSIGN expression TOKEN_TO expression TOKEN_DO statement

    TOKEN_ID  shift, and go to state 75


state 49

   44 structuredStatement: TOKEN_IF . expression TOKEN_THEN statement
   45                    | TOKEN_IF . expression TOKEN_THEN statement TOKEN_ELSE statement

    TOKEN_STR    shift, and go to state 76
    TOKEN_NOT    shift, and go to state 77
    TOKEN_PLUS   shift, and go to state 62
    TOKEN_MINUS  shift, and go to state 63
    TOKEN_ID     shift, and go to state 78
    TOKEN_INT    shift, and go to state 79
    TOKEN_LPAR   shift, and go to state 80

    expression         go to state 81
    simpleExpression   go to state 82
    term               go to state 83
    factor             go to state 84
    functionReference  go to state 85
    variable           go to state 86
    sign               go to state 87


state 50

   46 structuredStatement: TOKEN_WHILE . expression TOKEN_DO statement

    TOKEN_STR    shift, and go to state 76
    TOKEN_NOT    shift, and go to state 77
    TOKEN_PLUS   shift, and go to state 62
    TOKEN_MINUS  shift, and go to state 63
    TOKEN_ID     shift, and go to state 78
    TOKEN_INT    shift, and go to state 79
    TOKEN_LPAR   shift, and go to state 80

    expression         go to state 88
    simpleExpression   go to state 82
    term               go to state 83
    factor             go to state 84
    functionReference  go to state 85
    variable           go to state 86
    sign               go to state 87


state 51

   42 procedureStatement: TOKEN_ID . TOKEN_LPAR actualParameterList TOKEN_RPAR
   88 variable: TOKEN_ID . $@4 componentSelection

    TOKEN_LPAR  shift, and go to state 89

    $default  reduce using rule 87 ($@4)

    $@4  go to state 90


state 52

   43 structuredStatement: compoundStatement .

    $default  reduce using rule 43 (structuredStatement)


state 53

   32 compoundStatement: TOKEN_BEGIN statementSequence . TOKEN_END
   33 statementSequence: statementSequence . TOKEN_SEMICOLON statement

    TOKEN_END        shift, and go to state 91
    TOKEN_SEMICOLON  shift, and go to state 92


state 54

   34 statementSequence: statement .

    $default  reduce using rule 34 (statementSequence)


state 55

   35 statement: groupSimStruStatement .

    $default  reduce using rule 35 (statement)


state 56

   36 groupSimStruStatement: simpleStatement .

    $default  reduce using rule 36 (groupSimStruStatement)


state 57

   38 simpleStatement: assignmentStatement .

    $default  reduce using rule 38 (simpleStatement)


state 58

   39 simpleStatement: procedureStatement .
